--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "yup": "^0.32.11"
