--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,6 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/prop-types":0,
-    "no-unused-vars":"warn",
-    
+    "no-unused-vars":"warn"
   }
 }
