--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cuid": "^2.1.8",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.10",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
