--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
+    "react-cropper": "^2.1.8",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-toastify": "^8.2.0",
